--- a/index.html
+++ b/index.html
@@ -1,69 +1,81 @@
 <!DOCTYPE html>
 
-<html lang="ja"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>篠ノ井技術クラブ | OFFICIAL SITE</title> <link rel="stylesheet" href="style.css"> <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Noto+Sans+JP:wght@400;900&display=swap" rel="stylesheet"> <style> body { background: #0f172a; color: #fff; margin: 0; font-family: 'Noto Sans JP', sans-serif; overflow-x: hidden; padding-bottom: 90px; /* 下部メニューの高さ分確保 */ }
+<html lang="ja"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>篠ノ井技術クラブ | OFFICIAL SITE</title> <link rel="stylesheet" href="style.css"> <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Noto+Sans+JP:wght@400;900&display=swap" rel="stylesheet"> <style> body { background: #eef9ff; /* 薄い水色 */ color: #1e293b; margin: 0; font-family: 'Noto Sans JP', sans-serif; overflow-x: hidden; padding-bottom: 90px; }
 
-    #nav-container { width: 100%; position: fixed; top: 0; z-index: 9999; }
+    #nav-container { width: 100%; position: fixed; top: 0; z-index: 9999; background: #fff; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
 
     .hero { 
         height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; 
-        background: radial-gradient(circle at center, #1e293b 0%, #0f172a 100%);
+        background: linear-gradient(180deg, #ffffff 0%, #eef9ff 100%);
         text-align: center; padding: 0 20px;
     }
 
-    .hero h1 { font-family: 'Orbitron'; font-size: clamp(2.5rem, 10vw, 6rem); margin: 0; letter-spacing: 15px; font-weight: 900; color: #fff; text-shadow: 0 0 25px rgba(0, 174, 239, 0.6); }
-    .hero p { color: #00aeef; font-weight: 900; letter-spacing: 5px; margin-top: 20px; font-size: 1.2rem; }
+    .hero h1 { font-family: 'Orbitron'; font-size: clamp(2.5rem, 10vw, 5.5rem); margin: 0; letter-spacing: 12px; font-weight: 900; color: #0f172a; }
+    .hero p { color: #00aeef; font-weight: 900; letter-spacing: 4px; margin-top: 15px; font-size: 1.1rem; }
 
-    /* 中央のログイン連動ボタン */
+    /* 丸みのある四角で囲ったステータスエリア */
+    .status-box {
+        margin-top: 50px;
+        padding: 15px 30px;
+        background: #fff;
+        border: 2px solid #00aeef;
+        border-radius: 12px; /* 丸みのある四角 */
+        display: inline-block;
+        min-width: 280px;
+        box-shadow: 0 4px 15px rgba(0, 174, 239, 0.1);
+    }
+
+    #log-status-text {
+        font-family: 'Orbitron', sans-serif;
+        font-size: 0.8rem;
+        color: #00aeef;
+        font-weight: 700;
+        letter-spacing: 1px;
+    }
+
+    /* ログイン時のみ出現するボタン */
     #hero-mypage-btn {
         display: none;
-        margin-top: 40px;
-        padding: 18px 45px;
-        background: rgba(0, 174, 239, 0.1);
-        color: #00aeef;
-        border: 2px solid #00aeef;
-        border-radius: 50px;
+        margin-top: 25px;
+        padding: 12px 35px;
+        background: #00aeef;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 8px;
         font-family: 'Orbitron';
         font-weight: 900;
-        text-decoration: none;
+        font-size: 0.9rem;
         transition: 0.3s;
-        animation: pulse 2s infinite;
-        z-index: 10;
     }
+    #hero-mypage-btn:hover { background: #008cc2; transform: translateY(-2px); }
 
-    @keyframes pulse {
-        0% { box-shadow: 0 0 0 0 rgba(0, 174, 239, 0.7); }
-        70% { box-shadow: 0 0 0 20px rgba(0, 174, 239, 0); }
-        100% { box-shadow: 0 0 0 0 rgba(0, 174, 239, 0); }
-    }
-
-    /* menu.jsの下部メニューをPCでも強制的に出す設定 */
+    /* 下部メニューをスマホでもPCでも強制表示 */
     #mobile-line-menu {
         display: flex !important; 
         position: fixed !important;
         bottom: 0 !important;
         left: 0 !important;
-        transform: translateY(0) !important;
         width: 100% !important;
-        height: 85px !important;
-        background: rgba(15, 23, 42, 0.95) !important;
-        backdrop-filter: blur(15px) !important;
-        border-top: 1px solid rgba(0, 174, 239, 0.3) !important;
+        height: 80px !important;
+        background: rgba(255, 255, 255, 0.95) !important;
+        backdrop-filter: blur(10px) !important;
+        border-top: 1px solid #e2e8f0 !important;
         z-index: 10006 !important;
         justify-content: center !important;
         align-items: center !important;
-        box-shadow: 0 -10px 30px rgba(0,0,0,0.5) !important;
+        box-shadow: 0 -5px 20px rgba(0,0,0,0.05) !important;
     }
 
-    /* 下部メニューの中のボタンを見やすく調整 */
+    /* メニュー内のボタン（チップ）の調整 */
     .m-chip {
-        border: 1px solid rgba(255,255,255,0.1) !important;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.4) !important;
+        background: #f1f5f9 !important;
+        color: #475569 !important;
+        border: 1px solid #e2e8f0 !important;
+        border-radius: 10px !important; /* 少し角丸 */
+        font-weight: 900 !important;
     }
 
-    .main-content { max-width: 1200px; margin: 0 auto; padding: 100px 20px; }
-    .section-title { font-family: 'Orbitron'; font-size: 2rem; border-left: 5px solid #00aeef; padding-left: 20px; margin-bottom: 50px; color: #fff; }
-
-    footer { padding: 120px 20px; text-align: center; border-top: 1px solid rgba(255,255,255,0.1); background: #0f172a; }
+    footer { padding: 80px 20px; text-align: center; border-top: 1px solid #e2e8f0; background: #fff; }
 </style>
 </head> <body>
 
@@ -71,16 +83,14 @@
 
 <section class="hero"> <h1>SHINONOI</h1> <p>ENGINEERING CLUB</p>
 
-<a href="team/index.html" id="hero-mypage-btn">OPEN DASHBOARD</a>
-
-<div style="margin-top: 50px;">
-    <span id="log-status-text" style="font-family:'Orbitron'; font-size:0.75rem; color:#64748b; letter-spacing: 3px;">INITIALIZING SYSTEM...</span>
+<div class="status-box">
+    <span id="log-status-text">CONNECTING SYSTEM...</span>
 </div>
+
+<a href="team/index.html" id="hero-mypage-btn">MEMBER PAGE</a>
 </section>
 
-<main class="main-content"> <h2 class="section-title">PROJECTS</h2> <div style="height: 200px; border: 1px dashed #1e293b; border-radius: 20px; display: flex; justify-content: center; align-items: center; color: #334155; font-family: 'Orbitron'; letter-spacing: 5px;"> SYSTEM READY </div> </main>
-
-<footer> <div id="google_translate_element"></div> <p style="font-family:'Orbitron'; font-size:0.8rem; margin-top:25px; color: #475569; letter-spacing: 2px;">&copy; 2026 SHINONOI ENGINEERING CLUB</p> </footer>
+<footer> <div id="google_translate_element"></div> <p style="font-family:'Orbitron'; font-size:0.7rem; color: #94a3b8; letter-spacing: 2px;">&copy; 2026 SHINONOI ENGINEERING CLUB</p> </footer>
 
 <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
 
@@ -90,23 +100,16 @@
 
 <script src="menu.js" defer></script>
 
-<script> window.addEventListener('load', () => { // Firebaseの状態を監視 firebase.auth().onAuthStateChanged((user) => { const btn = document.getElementById('hero-mypage-btn'); if (user) { // ログインしていたら中央のボタンを表示 if(btn) btn.style.display = 'inline-block'; } else { if(btn) btn.style.display = 'none'; } });
+<script> window.addEventListener('load', () => { firebase.auth().onAuthStateChanged((user) => { const btn = document.getElementById('hero-mypage-btn'); const statusBox = document.querySelector('.status-box'); if (user) { if(btn) btn.style.display = 'inline-block'; // ログイン時は枠線の色を変える if(statusBox) statusBox.style.borderColor = "#00aeef"; } else { if(btn) btn.style.display = 'none'; } });
 
-    // menu.js が生成した下部メニューの強制的な最終調整
-    setTimeout(() =&gt; {
+    // 下部メニューが消えないように強制チェック
+    setInterval(() =&gt; {
         const bottomNav = document.getElementById(&#39;mobile-line-menu&#39;);
-        if (bottomNav) {
+        if (bottomNav &amp;&amp; bottomNav.style.display === &#39;none&#39;) {
             bottomNav.style.setProperty(&#39;display&#39;, &#39;flex&#39;, &#39;important&#39;);
-            // リンクの文字を白く、背景を少し暗くして視認性を上げる
-            const chips = bottomNav.querySelectorAll(&#39;.m-chip&#39;);
-            chips.forEach(chip =&gt; {
-                if(!chip.style.background.includes(&#39;00aeef&#39;)) {
-                    chip.style.background = &quot;#1e293b&quot;;
-                    chip.style.color = &quot;#cbd5e1&quot;;
-                }
-            });
+            document.body.style.paddingBottom = &#39;80px&#39;;
         }
-    }, 600);
+    }, 1000);
 });
 
 function googleTranslateElementInit() {
